finish all style

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
    <div class="container2">
         <h2 class="head">Ejike Allwell</h2>
         <span class="location">Abia State, Nigeria</span>
-        <p class="intro"></p>
+        <p class="text">"Front-end developer and amid reader"</p>
    </div>
-
-   <nav class="socials">
-        <button class="links">Github</button>
-        <button class="links">Frontend Mentor</button>
-        <button class="links">Linkeldn</button>
-        <button class="links">Twitter</button>
-        <button class="links">Instagram</button>
-   </nav>
+     
+     <nav class="socials">
+          <button class="links"> GitHub           </button>
+          <button class="links"> Frontend Mentor  </button>
+          <button class="links"> Linkeldn         </button>
+          <button class="links"> Twitter          </button>
+          <button class="links"> Instagram        </button>
+     </nav>
 </div>
 </body>
 </html>
