add personal links to the buttons

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
    </div>
      
      <nav class="socials">
-          <button class="links"> GitHub           </button>
-          <button class="links"> Frontend Mentor  </button>
-          <button class="links"> Linkeldn         </button>
-          <button class="links"> Twitter          </button>
-          <button class="links"> Instagram        </button>
+          <button class="links" onclick="window.open('https://github.com/ejike-allwell-b4b898356', '_blank')"> GitHub           </button>
+          <button class="links" onclick="window.open('https://www.frontendmentor.io/profile/ejike-allwell-b4b898356' ,  '_blank')"> Frontend Mentor  </button>
+          <button class="links" onclick="window.open('https://www.linkedin.com/in/ejike-allwell-b4b898356?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app', '_blank')"> Linkeldn         </button>
+          <button class="links" onclick="window.open('https://x.com/ejike897067?t=3cal2SpFkAFkgGs5ykwOcg&s=09', '_blank')"> Twitter          </button>
+          <button class="links" onclick="alert('no insta for now')"> Instagram        </button>
      </nav>
 </div>
 </body>
